fixed font size and spacing issue related to design fixes + added HTML for 'members' dropdown

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -78,6 +78,7 @@
 .channelWindow{
     width: 469px;
     height: 654px;
+    background: #fff;
     border: 1px solid #CECCCC;
     border-radius: 8px;
     color: #232323;
@@ -199,21 +200,24 @@
 
 .channelWindowInner{
     display: flex;
-    align-items: end;
-    min-height: 515px;
+    flex-direction: column;
+    /* align-items: end; */
+    height: 518px;
     background: #fff;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .channelWindowMessages{
     display: flex;
     flex-direction: column;
 
-    max-height: 515px;
     padding: 0 24px;
-    overflow-x: hidden;
-    overflow-y: auto;
+    min-height: 450px;
+    /* overflow-x: hidden;
+    overflow-y: auto; */
 }
 .channelWindowMessages > div:first-child:not(.searchInChatWrapper){
-    margin-top: 24px;
+    padding-top: 24px;
 }
 
 .bookmarkIcon{
@@ -245,7 +249,7 @@
     color: #929090;
     background: #fff;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 10px;
     border-radius: 4px;
 }
@@ -255,20 +259,20 @@
 }
 
 .channelMessageMain{
-    margin-bottom: 24px;
+    padding-bottom: 24px;
 }
 .channelMessageInner{
     display: flex;
     margin-bottom: 8px;
     align-items: center;
 }
-.channelMessageInner .profileAvtar{
+.channelWindow .profileAvtar{
     /* width: 30px;
     max-width: 30px; */
     border-radius: 50%;
     margin-right: 8px;
 }
-.channelMessageInner .profileName{
+.channelWindow .profileName{
     font-size: 14px;
     font-weight: 500;
 }
@@ -276,14 +280,17 @@
     margin-left: 8px;
     padding: 4px;
     border-radius: 4px;
-    font-size: 11px;
-    line-height: 11px;
+    font-size: 10px;
+    line-height: 10px;
 }
 .profileDesignation.sales{
     background: #FCE4E1;
 }
 .profileDesignation.deliveryTeam{
     background: #DBF9E2;
+}
+.profileDesignation.coeteam{
+    background: rgb(123, 97, 255, 0.2);
 }
 .channelMessageInner .timeStamp{
     margin-right: 4px;
@@ -299,7 +306,7 @@
 .channelMessageBox{
     position: relative;
     padding: 8px;
-    /* padding-bottom: 15px; */
+    padding-bottom: 15px;
     border-radius: 8px;
 
     font-size: 12px;
@@ -391,11 +398,11 @@
     position: sticky;
     top: 0;
     z-index: 999;
-    margin: 0 -24px 10px;
+    margin: 0;
     padding: 9px 15px;
-    border-radius: 8px 8px 0px 0px;
-    background: rgba(255, 255, 255, 0.5);
-    backdrop-filter: blur(3px);
+    border-radius: 0px 0px 8px 8px;
+    background: rgba(223, 223, 223, 0.5);
+    backdrop-filter: blur(5px);
 }
 .searchInChatInner{
     position: relative;
@@ -452,7 +459,8 @@
 
     border-left: 1px solid #CECCCC;
     padding-left: 15px;
-    font-size: 11px;
+    font-size: 10px;
+    font-weight: 400;
 }
 .numberOfSearch svg{
     display: block;
@@ -490,6 +498,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.chatReaction .chatReactionSmile svg{
+    opacity: 0.6;
 }
 .chatReaction .chatReactionActive{
     background: #FFDA31;
@@ -601,4 +612,32 @@
     position: absolute;
     right: 0;
     top: 0;
+}
+.membersArea{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.membersAreaLeft{
+    display: flex;
+    align-items: center;
+}
+.profileAvtar{
+    border-radius: 20px;
+    margin-right: 8px;
+}
+.profileName{
+    font-size: 14px;
+    font-weight: 500;
+}
+.removeLink{
+    text-decoration: underline;
+    font-size: 11px;
+}
+
+.addMembers{
+    text-decoration: underline;
+    font-size: 14px;
+    font-weight: 400;
+    margin-left: 12px;
 }
